- Updated namespaces to be non-plural - Removed Mario from the OverworldScene - Converted MarioLargeRunningActorState to be a regular class rather   than a singleton - Added test QuestionMarkBox to the far right of stage to ensure stage   dimensions are indeed acurate

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,13 @@
 # Java class files
 *.class
 
+#IntelliJ IDEA project files
+.idea/
+
 # generated files
 bin/
 gen/
+out/
 
 # Local configuration file (sdk path, etc)
 local.properties
